--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -138,10 +138,10 @@
                                                     NV @Html.DisplayFor(modelItem => item.Dkxt_HB_NguyenVong)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Nganh.Nganh_GhiChu)
+                                                    @Html.DisplayFor(modelItem => item.Nganh.Nganh_TenNganh)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.ToHopMon.Thm_MaTen)
+                                                    @Html.DisplayFor(modelItem => item.ToHopMon.Thm_TenToHop)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.Dkxt_HB_Diem_Tong_Full)
