--- a/Areas/Admin/Views/TruongLienCaps/LcTieuhoc.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/LcTieuhoc.cshtml
@@ -67,7 +67,35 @@
                         <div class="d-inline-flex flex-nowrap align-items-center">
                             <button class="btn btn-outline-primary " id="bt_search" style="margin-right:4px">Lọc</button>
                             <a class="btn btn-outline-secondary " id="bt_reset" href="@Url.Action("LcTieuhoc", "TruongLienCaps")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                            <a class="btn btn-outline-primary " id="bt_reset" href="#" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                            <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel" href="@Url.Action("ExportHocSinhTH", "TruongLienCaps")" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                            <script>
+                                    $(document).ready(function () {
+                                        $('#bt_export_excel').click(function () {
+                                            var _filteriDotxt = $('#filteriDotxt').val();
+                                            var _searchString = $('#searchString').val();
+                                            var data = {
+                                                FilteriDotxt: _filteriDotxt,
+                                                SearchString: _searchString,
+                                            }
+                                            console.log(data)
+                                            $.ajax({
+                                                url: "/TruongLienCaps/ExportHocSinhTH/",
+                                                data: JSON.stringify(data),
+                                                type: "GET",
+                                                contentType: 'application/json;charset=utf-8',
+                                                dataType: 'json',
+                                                async: false,
+                                                success: function (response) {
+                                                    console.log(response)
+
+                                                },
+                                                error: function (errormessage) {
+                                                    console.log(errormessage.responseText);
+                                                }
+                                            });
+                                        });
+                                    });
+                            </script>
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
